# ESP32TouchAMOLED

./: BLE_SERVICES.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.en.md  README.md  sdkconfig.defaults
main/: CMakeLists.txt  ble_service.c  ble_service.h  idf_component.yml  main.c  power_button.c  power_button.h
main/fonts/: font_chakra_18.c  font_chakra_64.c  font_chakra_body_24.c  font_chakra_sec_30.c  font_chakra_title_30.c  fonts.h
pc_app/: README.md  ble_client.py  config.py  desk_companion.py  device.json  protocol.py  requirements.txt  service.py  simular_notificacoes.ps1  start.bat  start.ps1  test_notify.py  win_notifications.py
pc_app/icons/: README.md
